--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -4792,6 +4792,240 @@ i.toolbar-icon-tixing {
 
 
 
+/*月子房*/
+.order-yuezifang{
+  width:98%;
+  margin-left: 1%;
+  margin-top: 10px;
+}
+.order-yuezifang1{
+  width:100%;
+  height:40px;
+}
+.order-yuezifang1 li{
+  color:#fff;
+  text-align: left;
+  line-height: 40px;
+  background: #64CDBE;
+  float: left;
+  font-size: 12px;
+}
+.order-yuezifang1 li:nth-child(1){
+  width:68%;
+  padding-left: 2%;
+}
+.order-yuezifang1 li:nth-child(2){
+  width:26%;
+  margin-left: 1%;
+  padding-left: 3%;
+}
+
+
+.order-yuezifang2{
+  width:100%;
+  height:40px;
+}
+.order-yuezifang2 li{
+  color:#000;
+  text-align: left;
+  line-height: 40px;
+  background: #E9E9E9;
+  float: left;
+  font-size: 12px;
+}
+.order-yuezifang2 li:nth-child(1){
+  width:68%;
+  padding-left: 2%;
+}
+.order-yuezifang2 li:nth-child(2){
+  width:26%;
+  margin-left: 1%;
+  padding-left: 3%;
+}
+
+.order-yuezifang3{
+  width:100%;
+  height:40px;
+}
+.order-yuezifang3 li{
+  color:#000;
+  text-align: left;
+  line-height: 40px;
+  background: #DADADA;
+  float: left;
+  font-size: 12px;
+}
+.order-yuezifang3 li:nth-child(1){
+  width:68%;
+  padding-left: 2%;
+}
+.order-yuezifang3 li:nth-child(2){
+  width:26%;
+  margin-left: 1%;
+  padding-left: 3%;
+}
+
+
+
+
+
+
+/*母婴到家*/
+#muyin1{
+  width:48%;
+  font-size: 12px;
+  float: right;
+  margin:0;margin-right: 1%;
+  line-height: 20px;
+}
+#muyin2{
+  width:48%;
+  font-size: 12px;
+  float: left;
+  margin:0;margin-left: 1%;
+  line-height: 20px;
+  margin-top: 50px;
+}
+#muyin3{
+  width:48%;
+  font-size: 12px;
+  float: right;
+  margin:0;margin-right: 1%;
+  line-height: 20px;
+  margin-top: 60px;
+}
+.muyin4{
+  width:95%;
+  margin-left: 2.5%;
+  margin-top: 15px;
+  font-size: 12px;
+}
+.muyin4-1{
+  width:100%;
+  height:30px;
+}
+.muyin4-1 li{
+  float: left;
+  margin-left: 1px;
+  line-height: 30px;
+  color:#000;
+  text-align: center;
+  font-size: 12px;
+  background: #82CEC3;
+}
+.muyin4-1 li:nth-child(1){
+  width:19%;
+}
+.muyin4-1 li:nth-child(2){
+  width:40%;
+}
+.muyin4-1 li:nth-child(3){
+  width:40%;
+}
+
+.muyin4-2{
+  width:100%;
+  height:60px;
+}
+.muyin4-2 li{
+  float: left;
+  height:60px;
+  margin-left: 1px;
+  line-height: 20px;
+  color:#fff;
+  text-align: center;
+  font-size: 12px;
+  background: #EBAC44;
+}
+.muyin4-2 li:nth-child(1){
+  width:19%;
+  line-height: 60px;
+}
+.muyin4-2 li:nth-child(2){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+.muyin4-2 li:nth-child(3){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+
+.muyin4-3{
+  width:100%;
+  height:100px;
+}
+.muyin4-3 li{
+  float: left;
+  height:100px;
+  margin-left: 1px;
+  line-height: 20px;
+  color:#fff;
+  text-align: center;
+  font-size: 12px;
+  background: #CF6876;
+}
+.muyin4-3 li:nth-child(1){
+  width:19%;
+  line-height: 100px;
+}
+.muyin4-3 li:nth-child(2){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+.muyin4-3 li:nth-child(3){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+
+.muyin4-4{
+  width:100%;
+  height:120px;
+}
+.muyin4-4 li{
+  float: left;
+  height:120px;
+  margin-left: 1px;
+  line-height: 20px;
+  color:#fff;
+  text-align: center;
+  font-size: 12px;
+  background: #7AB4F1;
+}
+.muyin4-4 li:nth-child(1){
+  width:19%;
+  line-height: 120px;
+}
+.muyin4-4 li:nth-child(2){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+.muyin4-4 li:nth-child(3){
+  width:38%;
+  padding-left: 1%;
+  padding-right: 1%;
+  text-align: left;
+}
+
+#muyin5{
+  width:48%;
+  font-size: 12px;
+  float: right;
+  margin:0;margin-right: 1%;
+  line-height: 20px;
+  margin-top: 30px;
+}
+
+
 
 
 
@@ -4871,6 +5105,18 @@ i.toolbar-icon-tixing {
   margin-left: 1%;
   margin-top: 30px;
   float: left;
+}
+.all-img8{
+  width:45%;
+  margin-top: 30px;
+  margin-left: 3%;
+  float: left;
+}
+.all-img9{
+  width:45%;
+  margin-top: 30px;
+  margin-right: 3%;
+  float: right;
 }
 /*textarea标签设定*/
 .tarea{
