--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5129,7 +5129,164 @@ i.toolbar-icon-tixing {
 
 
 
+/*日历改版*/
+.rilichange{
+  width:100%;
+  margin:0 auto;
+  height:460px;
+  background: #EAF3F2;
+}
+.rilichange1{
+  width:100%;
+  height:120px;
+  background: linear-gradient(to top, #67E3F8 , #7AA0F4);
+}
+.rilichange1-1{
+  text-align: center;
+  line-height: 40px;
+  color:#fff;
+  font-weight: bold;
+  font-size: 18px;
+  width:100%;
+  height:40px;
+}
+.rilichange1-2{
+  width:100%;
+  height:40px;
+}
+.rilichange1-2 li{
+  width:33.3%;float: left;font-size: 18px;
+  color:#fff;
+}
+.rilichange1-2 li:nth-child(1){
+  width:30.333333333333333%;
+  text-align: left;
+  padding-left: 3%;
+}
+.rilichange1-2 li:nth-child(2){
+  width:33.333333333333333%;
+  text-align: center;
+}
+.rilichange1-2 li:nth-child(3){
+  width:30.333333333333333%;
+  text-align: right;
+  padding-right: 3%;
+}
+.rilichange1-2 li span{
+  border:1px solid #fff;
+}
+.rilichange1-2 li span:hover{
+  cursor: pointer;
+}
+.rilichange1-3{
+  width:100%;
+  height:40px;
+}
+.rilichange1-3 li{
+  float: left;
+  width:14.2%;
+  text-align: center;
+  line-height: 40px;
+  color:#fff;
+  font-size: 14px;
+}
+.rilichange1-3 li:hover{
+  color:#000;
+  cursor: pointer;
+}
+.rilichange1-4{
+  width:100%;
+  height:40px;
+  background: #fff;
+}
+.rilichange1-4 li{
+  float: left;
+  width:14.2%;
+  text-align: center;
+  line-height: 40px;
+  color:#000;
+  font-size: 14px;
+  height:40px;
+}
+.rilichange1-4 li p{
+  margin:0;
+  width:40px;
+  height:40px;
+  margin-left: 5%;
+  border-radius: 50%;
+}
 
+.rilichange1-5{
+  width:100%;
+  height:220px;
+  margin-top: 10px;
+  background: #fff;
+  clear: both;
+}
+.rilichange1-5 li{
+  float: left;
+  width:13%;
+  text-align: center;
+  line-height: 40px;
+  color:#000;
+  font-size: 14px;
+  margin-left: 2.5%;
+  border:1px solid #ABABAB;
+  margin-top: 10px;
+}
+.rilichange1-5 li:hover{
+  cursor: pointer;
+}
+.rilichange1-5 li p{
+  color:#999;
+  width:100%;
+  height:20px;
+  line-height: 20px;
+  text-align: center;
+  font-size: 14px;
+  margin:0;
+}
+.rilichange1-6{
+  width:100%;
+  height:60px;
+  margin-top: 30px;
+}
+/*灰色按钮*/
+.rilichange1-6-2{
+  width:60px;
+  height:60px;
+  background: #ccc;
+  border-radius: 50%;
+  color:#fff;
+  margin-left: 45%;
+  text-align: center;
+  line-height: 60px;
+}
+/*正常按钮*/
+.rilichange1-6-1{
+  width:60px;
+  height:60px;
+  background: #FEB954;
+  border-radius: 50%;
+  color:#fff;
+  margin-left: 45%;
+  text-align: center;
+  line-height: 60px;
+}
+/*星期特效*/
+.rilichange-week{
+  color:#000!important;
+}
+/*天特效*/
+.rilichange-day{
+  color:#fff;
+  background: #FEB954;
+}
+/*时刻特效*/
+.rilichange-time{
+  color:#FEB954!important;
+  border:1px solid #FEB954!important;
+}
 
 
 
