--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5310,6 +5310,44 @@ i.toolbar-icon-tixing {
 
 
 
+/*电梯广告*/
+.elevator{
+  width:100%;
+  background: #C904C3;
+  height:200px;
+  margin-top: -7px;
+}
+.elevator1{
+  color:#fff;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 100px;
+  margin-left: 15px;
+}
+.elevator1 input{
+  border:1px solid #fff;
+  padding-left: 5px;
+  width:45%;
+  height:30px;
+  line-height: 100px;
+  background: 0;
+  border-radius: 5px;
+}
+.elevator2{
+  width:50%;
+  height:50px;
+  margin-left: 25%;
+  text-align: center;
+  line-height: 50px;
+  font-size: 24px;
+  color:#fff;
+  font-weight: bold;
+  border:2px solid #FFD807;
+  border-radius: 5px;
+  background: #F80350;
+}
+
+
 
 
 
