--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5328,10 +5328,10 @@ i.toolbar-icon-tixing {
   border:1px solid #fff;
   padding-left: 5px;
   width:45%;
-  height:30px;
-  line-height: 100px;
+  height:30px;margin-top: 35px;
   background: 0;
   border-radius: 5px;
+  color:#fff;
 }
 .elevator2{
   width:50%;
@@ -5345,6 +5345,21 @@ i.toolbar-icon-tixing {
   border:2px solid #FFD807;
   border-radius: 5px;
   background: #F80350;
+}
+.elevator3{
+  width:50%;
+  height:50px;
+  margin-left: 25%;
+  text-align: center;
+  line-height: 50px;
+  font-size: 24px;
+  color:#fff;
+  font-weight: bold;
+  border:2px solid #F80350;
+  border-radius: 5px;
+  background: #FFD807;
+  margin-top: -200px;
+  position:absolute;
 }
 
 
