--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5507,6 +5507,47 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
   text-align: center;
   line-height: 24px;
 }
+.dingzhi-list1{
+  width:100%;
+  background: #fff;
+  margin-top: -7px;
+}
+.dingzhi-list1-1{
+  width:50%;
+  float: left;
+  height:;
+}
+.dingzhi-list1-1 p{
+  margin:0;
+  width:100%;
+  text-align: center;
+  line-height: 30px;
+}
+.dingzhi-list1-1-1{
+  width:90%;
+  margin-left: 5%;
+  height:180px;
+  background: #D3A372;
+  border-radius: 5px;
+}
+.dingzhi-list1-1-1 img{
+  width:90%;
+  margin-left: 5%;
+  margin-top:15px;
+}
+.dingzhi-list1-1-1 p{
+  margin:0;
+  color:#fff;
+  text-align: center;
+  line-height: 30px;
+  width:100%;
+  font-size: 14px;
+}
+.dingzhi-list2{
+  width:50%;
+  float: left;
+  height:100px;
+}
 
 
 
@@ -5544,6 +5585,15 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 }
 .special-color7{
   color: #000;
+}
+.special-color8{
+  color:#41E7D4;
+}
+.special-color9{
+  color:#D3A372;
+}
+.special-color10{
+  color:#FD0908;
 }
 /*图片处理*/
 .all-img{
@@ -5601,6 +5651,21 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 .all-img11{
   width:50%;float: left;margin-top: -7px;
 }
+.all-img12{
+  width:100%;
+  margin-top: 15px;
+}
+.all-img13{
+  width:80%;
+  margin-top: 40px;
+  margin-left: 10%;
+}
+.all-img14{
+  width:40%;
+  margin-left: 30%;
+  margin-top: 70px;
+}
+
 /*textarea标签设定*/
 .tarea{
   border:0;height:27px;margin-top:13px;width:100%;font-size: 14px;
@@ -5789,6 +5854,19 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
   line-height: 50px;
   color:#fff;
   margin-top: 15px;
+}
+.all-button16{
+  width:40%;
+  height:40px;
+  text-align: center;
+  line-height: 40px;
+  color:#fff;
+  font-weight: bold;
+  background: #D3A372;
+  border-radius: 5px;
+  margin-left: 30%;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 .beijingse{
   color:#FEB954;
