--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5471,6 +5471,9 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 .housework-5 li span{
   font-size: 14px;
 }
+.housework-6 li span{
+  font-size: 14px;
+}
 .housework-6{
   width:100;
   padding: 0!important;
