--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5513,6 +5513,31 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
   text-align: center;
   line-height: 24px;
 }
+.housework10{
+  width:100%;
+  height:60px;
+  position: fixed;
+  bottom:50px;
+  z-index: 5555;
+}
+.housework10-1{
+  width:50%;
+  height:60px;
+  background: #FF0066;
+  text-align: center;
+  line-height: 60px;
+  color:#fff;
+  float:left;
+}
+.housework10-2{
+  width:50%;
+  height:60px;
+  background: #FFD800;
+  text-align: center;
+  line-height: 60px;
+  color:#fff;
+  float:right;
+}
 .dingzhi-list1{
   width:100%;
   background: #fff;
