--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5623,6 +5623,72 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 
 
 
+/*家电清洗价目表*/
+.appliance{
+  width:100%;
+  height:auto;
+  background: #fff;
+}
+.appliance1{
+  width:100%;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.appliance1 img{
+  float: left;
+  margin-left: 15%;
+  width:30%;
+  margin-top: 5px;
+}
+.appliance1 span{
+  color:#FF7900;
+  font-size: 24px;
+  margin-left: 5px;
+}
+.appliance2{
+  width:100%;
+}
+.appliance2 img{
+  width:100%;
+  margin-top: -7px;
+}
+.appliance3{
+  width:100%;
+}
+.appliance3 li{
+  width:32%;
+  float: left;
+  margin-left: 1%;
+  line-height: 30px;
+  text-align: center;
+}
+.appliance3 li:nth-child(2){
+  color:#EF7E00;
+}
+.appliance4{
+  width:90%;
+  margin-left: 10%;
+  line-height: 30px;
+  color:#EF7E00;
+}
+.appliance3-1{
+  width:32%;
+  border:1px solid #D1D1D1;
+  float: left;
+}
+.appliance3 li  input{
+  width:32%;
+  border-left: 0;
+  border-right: 0;
+  border-top: 1px solid #D1D1D1;
+  float: left;
+  text-align: center;
+  height:30px;
+  line-height: 30px;
+}
+
+
+
 
 
 
