--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5654,6 +5654,7 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 }
 .appliance3{
   width:100%;
+  height:30px;
 }
 .appliance3 li{
   width:32%;
@@ -5661,6 +5662,7 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
   margin-left: 1%;
   line-height: 30px;
   text-align: center;
+  height:30px;
 }
 .appliance3 li:nth-child(2){
   color:#EF7E00;
