--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -5663,6 +5663,7 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
   line-height: 30px;
   text-align: center;
   height:30px;
+  font-size:14px;
 }
 .appliance3 li:nth-child(2){
   color:#EF7E00;
