--- a/jhj-web-user/css/my-app.css
+++ b/jhj-web-user/css/my-app.css
@@ -6098,3 +6098,15 @@ label.label-checkbox input[type=checkbox]:checked+.item-media i.icon-form-checkb
 }
 
 /* --------------五重好礼样式   end ------------------------------ */
+
+
+
+/* --------------母婴    start ------------------------------ */
+.shendu-circle p.chirld-p{
+    color: #f0a346;
+    font-size: 12px;
+    line-height: 18px;
+}
+
+
+/* --------------母婴    start ------------------------------ */
